<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.machanism.machai</groupId>
		<artifactId>machai</artifactId>
		<version>0.0.11-SNAPSHOT</version>
	</parent>

	<artifactId>genai-client</artifactId>
	<name>GenAI Client</name>
	<description>
		GenAI Client is a Java library designed for seamless integration with
		Generative AI providers. It offers foundational prompt management and
		embedding capabilities, enabling AI-powered features across Machai
		modules. The library simplifies interactions with AI services,
		supporting advanced use cases such as semantic search, automated content
		generation, and intelligent project assembly within the Machanism
		ecosystem.
	</description>

	<properties>
		<maven.compiler.release>8</maven.compiler.release>
		<maven.javadoc.skip>false</maven.javadoc.skip>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.machanism.macha.core.commons</groupId>
			<artifactId>configurator</artifactId>
			<version>0.0.5</version>
		</dependency>

		<dependency>
			<groupId>com.openai</groupId>
			<artifactId>openai-java</artifactId>
			<version>4.19.0</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.22.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.15.0</version>
		</dependency>

		<dependency>
			<groupId>com.ganteater</groupId>
			<artifactId>anteater-cli</artifactId>
			<version>1.2.9</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.apache.maven.shared</groupId>
			<artifactId>maven-shared-utils</artifactId>
			<version>3.4.2</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.4.8-jre</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.20.0</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.17</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.anthropic</groupId>
			<artifactId>anthropic-java</artifactId>
			<version>2.14.0</version>
		</dependency>
	</dependencies>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<links>
						<link>
							https://docs.oracle.com/en/java/javase/11/docs/api/</link>
						<link>
							https://macha.machanism.org/core/core-commons/configurator/apidocs/</link>
						<link>
							https://machai.machanism.org/project-layout/apidocs/</link>
					</links>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<scm>
		<connection>scm:git:https://github.com/machanism-org/machai.git</connection>
		<developerConnection>scm:git:https://github.com/machanism-org/machai.git</developerConnection>
		<url>https://github.com/machanism-org/machai.git</url>
	</scm>

</project>